ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum4/input.ts.stderr
error[1132]: Enum member expected
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum4/input.ts:4:9
  |
4 |         ,
  |         ^

